# lwjgl-natives-webgl

./: .gitignore  Cargo.toml  LICENSE_MIT  bun.lockb  package.json
.github/workflows/: rust.yml
js/: util.js
src/: default_sys_impl.rs  lib.rs  mem.rs  utils.rs
testpage/: bun.lockb  index.html  package.json  test.js  vite.config.ts
testpage/src/: App.svelte  main.ts  style.scss
tests/: main.rs  mem.rs  utils.rs
